force-app/main/default/objects/Krow__Resource_Request__c/Krow__Resource_Request__c.object-meta.xml
<CustomObject>
    <label>Resource Request</label>
    <nameField>
        <displayFormat>RR{00000000}</displayFormat>
        <label>Resource Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>