force-app/main/default/objects/Krow__Resource_Request__c/fields/Krow__Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>