force-app/main/default/objects/Krow__Resource_Request__c/fields/Krow__Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Assignment</label>
    <referenceTo>Krow__Project_Assignment__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>