force-app/main/default/objects/Krow__Resource_Request__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Krow_Project__c</columns>
    <columns>Krow__Start_Date__c</columns>
    <columns>Krow__End_Date__c</columns>
    <columns>Krow__Hours__c</columns>
    <columns>Krow__Project_Role__c</columns>
    <columns>Krow__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>